declare_args() {
  drv_chip_without_interrupt = false
}

pkggroup("mds") {
}

pkggroup("stm32h7xx_hal_driver") {
}

config("drv_chip_stm32h7xx_cfg") {
  include_dirs = [ "include/" ]
}

static_library("drv_chip_stm32h7xx") {
  sources = [
    "src/drv_gpio.c",
    "src/startup_stm32h7xx.c",
  ]

  defines = []

  if (defined(drv_chip_without_interrupt) && drv_chip_without_interrupt) {
    defines += [ "DRV_CHIP_WITHOUT_INTERRUPT=1" ]
  }

  public_deps = [
    ":mds",
    ":stm32h7xx_hal_driver",
  ]

  public_configs = [ ":drv_chip_stm32h7xx_cfg" ]
}
